--- a/src/sass/search.scss
+++ b/src/sass/search.scss
@@ -3,64 +3,6 @@
   display: flex;
   justify-content: center;
 }
-
-// .input-search {
-//   position: relative;
-
-//   display: inline-block;
-//   margin: 0 auto;
-//   padding: 5px;
-//   width: 50%;
-//   border: none;
-//   border-bottom: 1px solid black;
-//   margin-top: 20px;
-//   margin-bottom: 20px;
-//   background-color: rgba(211, 211, 211, 0.7);
-//   box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000,
-//     5px 5px 15px 5px rgba(211, 211, 211, 0.7);
-// }
-// .btn-submit {
-//   border: none;
-//   padding: 2px 4px;
-//   background-color: inherit;
-//   outline: 1px solid orangered;
-//   position: absolute;
-//   top: 27%;
-//   right: 20%;
-//   cursor: pointer;
-
-//   @media screen and (max-width: 768px) {
-//     right: 14%;
-//   }
-// }
-
-// * {
-//   border: 0;
-//   box-sizing: border-box;
-//   margin: 0;
-//   padding: 0;
-// }
-// :root {
-//   font-size: calc(16px + (24 - 16) * (100vw - 320px) / (1920 - 320));
-// }
-// body,
-// button,
-// input {
-//   font: 1em Hind, sans-serif;
-//   line-height: 1.5em;
-// }
-// body,
-// input {
-//   color: #171717;
-// }
-// body,
-// .search-bar {
-//   display: flex;
-// // }
-// body {
-//   background: #f1f1f1;
-//   height: 100vh;
-// }
 .search-bar input,
 .search-btn,
 .search-btn:before,
@@ -89,7 +31,7 @@
   margin: auto;
   padding: 1.5em;
   justify-content: center;
-  max-width: 26em;
+  max-width: 25em;
 }
 .search-bar input {
   background: transparent;
@@ -111,7 +53,7 @@
   border-radius: 0.375em 0 0 0.375em;
   box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000,
     5px 5px 15px 5px rgba(211, 211, 211, 0.7);
-  // box-shadow: 0 0 0 0.1em #d9d9d9 inset;
+
   transform: scale(1);
 }
 .search-btn {
@@ -126,14 +68,15 @@
 .search-btn:after {
   content: '';
   display: block;
+  position: absolute;
   opacity: 0;
   display: inline-block;
   margin: 0 auto;
-  padding: 5px;
+  padding: 2px;
   width: 50%;
   border: none;
   border-bottom: 1px solid $black;
-  margin-top: 20px;
+  margin-top: 2px;
   margin-bottom: 20px;
   background-color: rgba(211, 211, 211, 0.7);
   box-shadow: -10px 0px 13px -7px $black, 10px 0px 13px -7px $black,
@@ -144,14 +87,14 @@
   color: rgb(51, 51, 51);
 }
 body.dark-theme .input-search::placeholder {
-  color: $white;
+  color: #f1f1f1;
 }
 
 .btn-submit {
   border: none;
   padding: 2px 4px;
   background-color: rgba(255, 255, 255, 0.4);
-  outline: 1px solid $white;
+  outline: 1px solid #f1f1f1;
 
   position: absolute;
 }
@@ -166,8 +109,8 @@ body.dark-theme .input-search::placeholder {
 .search-btn:after {
   background: #f1f1f1;
   border-radius: 0 0.25em 0.25em 0;
-  top: 51%;
-  left: 51%;
+  top: 56%;
+  left: 58%;
   width: 0.75em;
   height: 0.25em;
   transform: translate(0.2em, 0) rotate(45deg);
